# vif

./: .gitignore  CMakeLists.txt  INSTALL  INSTALL.md  LICENSE  README  README.md  argv.hpp  astro.hpp  catinfo.cpp  cpwcs.cpp  fcolop.cpp  find_source.cpp  fitsh.cpp  fitsr2c.cpp  fitstool.cpp  getgal.cpp  image.hpp  index.html  make_catinfo.sh  make_cpwcs.sh  make_fcolop.sh  make_find_source.sh  make_fitsh.sh  make_fitsr2c.sh  make_fitstool.sh  make_getgal.sh  make_photinfo.sh  make_psffit.sh  make_qstack.sh  make_qstack2.sh  make_qxmatch.sh  make_qxmatch2.sh  make_refgen.sh  make_subsrc.sh  params.json  photinfo.cpp  phypp.sublime-project  print.hpp  psffit.cpp  (+5 more)
cmake/: FindCCFITS.cmake  FindGSL.cmake  FindGooglePerfTools.cmake  FindLLVM.cmake  FindLibClang.cmake  FindLibDwarf.cmake  Findphypp.cmake  Findvif.cmake
doc/: .gitignore  category_support_01_intro.html  category_support_02_generic.html  category_support_03_cmd.html  category_support_04_string.html  category_support_05_os.html  category_support_06_file.html  category_support_07_print.html  category_support_08_time.html  category_support_09_math.html  category_support_10_thread.html  category_support_11_fits.html  category_support_12_image.html  category_support_13_astro.html  compile.sh  functions_support_astro_catalog_get_band.html  functions_support_astro_cosmo_get_cosmo.html  functions_support_astro_cosmo_lookback_time.html  functions_support_astro_cosmo_lumdist.html  functions_support_astro_cosmo_propsize.html  functions_support_astro_cosmo_vuniverse.html  functions_support_astro_flux_cgs2uJy.html  functions_support_astro_flux_get_filter.html  functions_support_astro_flux_get_filter_id.html  functions_support_astro_flux_lir_8_1000.html  functions_support_astro_flux_lsun2mag.html  functions_support_astro_flux_lsun2uJy.html  functions_support_astro_flux_read_filter_db.html  functions_support_astro_flux_read_filter_map.html  functions_support_astro_flux_sed2flux.html  functions_support_astro_flux_sed_convert.html  functions_support_astro_flux_uJy2mag.html  functions_support_astro_psffit_make_psf.html  functions_support_astro_psffit_psffit.html  functions_support_astro_sedfit_limweight.html  functions_support_astro_sedfit_template_fit.html  functions_support_astro_sedfit_template_observed.html  functions_support_astro_sky_angcorrel.html  functions_support_astro_sky_field_area.html  functions_support_astro_sky_field_area_h2d.html  (+238 more)
doc/2html/: 2html_category.cpp  2html_functions.cpp  build.sh  common.hpp  footer.tex  header.html  header.tex  make_index.cpp  pygments.css
doc/latex/: category_support.tex  category_support_01_intro.tex  category_support_02_generic.tex  category_support_06_file.tex  category_support_08_time.tex  category_support_09_math.tex  category_support_13_astro.tex  category_support_cmd.tex  category_support_fits.tex  category_support_generic.tex  category_support_image.tex  category_support_os.tex  category_support_print.tex  category_support_string.tex  category_support_thread.tex  functions_support_astro_cosmo.tex  functions_support_astro_flux.tex  functions_support_astro_psffit.tex  functions_support_astro_sedfit.tex  functions_support_astro_sky.tex  functions_support_cmd.tex  functions_support_file_ascii.tex  functions_support_file_system.tex  functions_support_fits_image.tex  functions_support_generic_dim.tex  functions_support_generic_error.tex  functions_support_generic_find.tex  functions_support_generic_rearrange.tex  functions_support_generic_sequence.tex  functions_support_generic_vectorize.tex  functions_support_image.tex  functions_support_math_algebra.tex  functions_support_math_calculus.tex  functions_support_math_fit.tex  functions_support_math_geometry.tex  functions_support_math_interpol.tex  functions_support_math_lowlevel.tex  functions_support_math_random.tex  functions_support_math_reduce.tex  functions_support_math_sequence.tex  (+38 more)
doc/sphinx/: Makefile  argv.rst  astro.rst  conf.py  filesystem.rst  generic-dims.rst  generic-error.rst  generic-find.rst  generic-function-guidelines.rst  generic-indices.rst  generic-range.rst  generic-rearrange.rst  generic-sequence.rst  generic.rst  idl.rst  image.rst  index.rst  indexing.rst  io-ascii.rst  io-filesystem.rst  io-fits-generic.rst  io-fits-hdu.rst  io-fits-image.rst  (+29 more)
include/: argv.hpp  astro.hpp  color.hpp  file.hpp  fits.hpp  image.hpp  iterator.hpp  keyword.hpp  math.hpp  phypp.hpp  plot.hpp  print.hpp  range.hpp  reflex.hpp  reflex_helpers.hpp  string.hpp  time.hpp  variadic.hpp  vec.hpp  vif.hpp
python/: pycolfits.py
stylesheets/: pygment_trac.css  styles.css
test/: .gitignore  plot_test.cpp  speed_test.cpp  unit_test.cpp
tools/: CMakeLists.txt
tools/angcorrel/: CMakeLists.txt  angcorrel.cpp
tools/catinfo/: CMakeLists.txt  catinfo.cpp
tools/deg2sex/: CMakeLists.txt  deg2sex.cpp
tools/findsrc/: CMakeLists.txt  findsrc.ans  findsrc.cpp
tools/fits2ascii/: CMakeLists.txt  fits2ascii.cpp
tools/fitstool/: CMakeLists.txt  fitstool.cpp
tools/fluxcube/: CMakeLists.txt  fluxcube.cpp
tools/getgal/: CMakeLists.txt  getgal.cpp
tools/imgtool/: CMakeLists.txt  imgtool.cpp
tools/photinfo/: CMakeLists.txt  photinfo.cpp
tools/pixfit/: CMakeLists.txt  pixfit-addflx.cpp  pixfit-addtdcst.cpp  pixfit-combine.cpp  pixfit-common.hpp  pixfit-cutout.cpp  pixfit-extract.cpp  pixfit-findprior.cpp  pixfit-gfit.cpp  pixfit-prep.cpp  pixfit-reg2fits.cpp  pixfit-residual.cpp  pixfit-show.cpp  pixfit.cpp
tools/psffit/: CMakeLists.txt  psffit.cpp
tools/qaper/: CMakeLists.txt  qaper.cpp
tools/qconvol/: CMakeLists.txt  qconvol.cpp
tools/qmask/: CMakeLists.txt  qmask.cpp
tools/qregrid/: CMakeLists.txt  qregrid.cpp
tools/qstack/: CMakeLists.txt  qstack.cpp
tools/qstack2/: CMakeLists.txt  qstack2.cpp
tools/qxmatch/: CMakeLists.txt  qxmatch.cpp
tools/qxmatch2/: CMakeLists.txt  qxmatch2.cpp
tools/radec2pix/: CMakeLists.txt  radec2pix.cpp
tools/randsrc/: CMakeLists.txt  randsrc.cpp
tools/refgen/: CMakeLists.txt  refgen.cpp
tools/sex2deg/: CMakeLists.txt  sex2deg.cpp
tools/subsrc/: CMakeLists.txt  subsrc.cpp
(+216 files in other folders)
